--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,3 +19,15 @@
 .HomeButton{
   margin-top: 40px;
 }
+
+.google-btn{
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px;
+  background:#007bff;
+}
+
+
+
+
